<resources>
    <string name="app_name">MyAndroidToolBox</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img">image/png</string>
    <string name="gallery">Gallery</string>
    <string name="data">data</string>
    <string name="acc_s_aux_informations_android">Accès aux informations Android</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="remplissez_champs">Veillez à remplir tout les champs</string>
    <string name="infos">Info</string>
    <string name="date">dd/MM/yyyy</string>
    <string name="form">Form</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="voir_les_informations">Acces Info</string>
    <string name="message_welcome">Bienvenue dans mon Application</string>
    <string name="err">Error</string>
    <string name="profil">Profil</string>
    <string name="on_create">onCreate</string>
    <string name="first_fragment">Fragment 1</string>
    <string name="tag">TAG</string>
    <string name="first_frag_resum">Fragment 1 is resumed</string>
    <string name="second_frag_resum">Fragment 2 is resumed</string>
    <string name="on_start">onStart</string>
    <string name="on_resume">onResume</string>
    <string name="on_pause">onPause</string>
    <string name="on_stop">onStop</string>
    <string name="on_destroy">onDestroy</string>
    <string name="bonjour">Bonjour</string>
    <string name="cycle_de_vie">Cycle de vie</string>
    <string name="sauvegarde">Save</string>
    <string name="permissions">Permissions</string>
    <string name="web_services">Web services</string>
    <string name="button">Button</string>
    <string name="cycle_activit">Cycle activité</string>
    <string name="connexion">Connexion</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="hello">COUCOU !</string>
    <string name="donner_nom">Nom :</string>
    <string name="donner_prenom">Prénom :</string>
    <string name="donner_date_naissance">Date de naissance :</string>
    <string name="donner_age">Age :</string>
    <string name="informations_du_profil">Informations du profil :</string>
    <string name="sexe">Sexe :</string>
    <string name="donner_mail">Email :</string>
</resources>
