<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="101dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logoisen" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginTop="59dp"
        android:text="@string/message_welcome"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/permissionButton"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="75dp"
        android:background="@color/reed"
        android:tint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifecycle"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="92dp"
        android:layout_height="81dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/reed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/lifeCycleButton"
        android:layout_width="91dp"
        android:layout_height="80dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="250dp"
        android:background="@color/reed"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="93dp"
        android:layout_height="80dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/reed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save"
        app:srcCompat="@android:drawable/ic_menu_compass" />

    <TextView
        android:id="@+id/lifecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="9dp"
        android:text="@string/cycle_de_vie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifeCycleButton" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="@string/sauvegarde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <TextView
        android:id="@+id/permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/permissions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionButton" />

    <TextView
        android:id="@+id/webservices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/web_services"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00E61010"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>